--- a/package.json
+++ b/package.json
@@ -19,31 +19,33 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "acorn": "^7.1.1",
     "bootstrap": "3.4.1",
     "core-js": "^3.6.4",
     "handlebars": "^4.7.3",
+    "minimist": "^1.2.5",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "serialize-javascript": "^2.1.2",
-    "tslib": "^1.9.0",
+    "tslib": "^1.11.1",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "^8.3.25",
+    "@angular-devkit/build-angular": "^0.901.0",
+    "@angular/cli": "^8.3.26",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~12.0.2",
-    "codelyzer": "^5.2.1",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "^5.4.3",
     "ts-node": "~8.1.0",
     "tslint": "~5.11.0",
